// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal tests should render Modal correctly 1`] = `<DocumentFragment />`;

exports[`Modal tests should render Modal correctly open 1`] = `
<DocumentFragment>
  .c5 {
  height: 1.5rem;
  width: 1.5rem;
  flex-shrink: 0;
}

.c6 {
  color: #000000;
  font-size: 1.5rem;
}

.c10 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #000000;
  width: normal;
  height: normal;
  margin-left: 0.25rem;
  width: fit-content;
}

.c10:hover:not(:disabled) {
  background-color: #EEEEEE;
}

.c10:active:not(:disabled) {
  background-color: #E2E2E2;
}

.c10 .material-symbols-sharp {
  color: inherit;
}

.c10 svg,
.c10 svg g {
  fill: #000000;
}

.c10:disabled {
  cursor: not-allowed;
  opacity: 0.6;
}

.c11 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  width: normal;
  height: normal;
  margin-left: 0.25rem;
  width: fit-content;
}

.c11:hover:not(:active, :disabled) {
  background-color: #0e55d7;
}

.c11 .material-symbols-sharp {
  color: inherit;
}

.c11 svg,
.c11 svg g {
  fill: #FFFFFF;
}

.c11:disabled {
  cursor: not-allowed;
  opacity: 0.6;
}

.c4 {
  margin-left: auto;
  border: none;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 50%;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #000000;
  height: 2.25rem;
  width: 2.25rem;
}

.c4 .material-symbols-sharp {
  color: inherit;
}

.c4:hover {
  background-color: #EEEEEE;
}

.c4:active {
  background-color: #E2E2E2;
}

.c3 {
  font-size: 1.25rem;
  line-height: 1.875rem;
  font-weight: 500;
  font-family: roboto;
  margin-right: 0.5rem;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #000000;
}

.c0 {
  position: fixed;
  inset: 0;
  z-index: 110;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 0 1.25rem;
}

.c1 {
  display: flex;
  flex-direction: column;
  max-width: 576px;
  width: 100%;
  min-height: 0px;
  background-color: #FFFFFF;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
  border-radius: 4px;
  z-index: 1;
  max-height: calc(100vh - 1.875rem);
}

.c7 {
  display: flex;
  flex-direction: column;
  overflow: auto;
}

.c7::-webkit-scrollbar {
  width: 4px;
}

.c7::-webkit-scrollbar-track {
  background: #EEEEEE;
}

.c7::-webkit-scrollbar-thumb {
  background: #CBCBCB;
}

.c7::-webkit-scrollbar-thumb:hover {
  background: #AFAFAF;
}

.c2 {
  height: 4.75rem;
  padding: 0 1.25rem;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  display: flex;
  align-items: center;
  background-color: #FFFFFF;
  flex-shrink: 0;
}

.c8 {
  padding: 2px 1.25rem;
  padding-bottom: 2px;
  display: flex;
  flex-direction: column;
}

.c9 {
  background-color: #FFFFFF;
  height: 4.75rem;
  padding: 0 1.25rem;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  justify-content: flex-end;
  margin-top: auto;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.c12 {
  position: absolute;
  inset: 0;
  z-index: 0;
  background-color: rgba(0,0,0,0.5);
}

<div
    class="c0"
    data-testid="modal-container"
    style="opacity: 0;"
  >
    <div
      class="c1"
      style="opacity: 0; transform: translate3d(0px, 50px, 0px);"
    >
      <div
        class="c2"
      >
        <h2
          class="c3"
          font-family="roboto"
        >
          Create Flag
        </h2>
        <button
          class="c4"
        >
          <div
            class="c5"
            data-testid="icon-container"
            size="24"
          >
            <span
              class="c6 material-symbols-rounded"
              color="#000000"
              data-testid="icon"
              size="24"
            >
              close
            </span>
          </div>
        </button>
      </div>
      <div
        class="c7"
      >
        <div
          class="c8"
        >
          Body Content
        </div>
        <div
          class="c9"
        >
          <button
            class="c10"
            data-testid="button"
          >
            <span
              class=""
            >
              Close
            </span>
          </button>
          <button
            class="c11"
            data-testid="button"
          >
            <span
              class=""
            >
              Create
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="c12"
    />
  </div>
</DocumentFragment>
`;

exports[`Modal tests should render Modal with custom props 1`] = `
<DocumentFragment>
  .c5 {
  height: 1.5rem;
  width: 1.5rem;
  flex-shrink: 0;
}

.c6 {
  color: #000000;
  font-size: 1.5rem;
}

.c10 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #000000;
  width: normal;
  height: normal;
  margin-left: 0.25rem;
  width: fit-content;
}

.c10:hover:not(:disabled) {
  background-color: #EEEEEE;
}

.c10:active:not(:disabled) {
  background-color: #E2E2E2;
}

.c10 .material-symbols-sharp {
  color: inherit;
}

.c10 svg,
.c10 svg g {
  fill: #000000;
}

.c10:disabled {
  cursor: not-allowed;
  opacity: 0.6;
}

.c11 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  width: normal;
  height: normal;
  margin-left: 0.25rem;
  width: fit-content;
}

.c11:hover:not(:active, :disabled) {
  background-color: #0e55d7;
}

.c11 .material-symbols-sharp {
  color: inherit;
}

.c11 svg,
.c11 svg g {
  fill: #FFFFFF;
}

.c11:disabled {
  cursor: not-allowed;
  opacity: 0.6;
}

.c4 {
  margin-left: auto;
  border: none;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 50%;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #000000;
  height: 2.25rem;
  width: 2.25rem;
}

.c4 .material-symbols-sharp {
  color: inherit;
}

.c4:hover {
  background-color: #EEEEEE;
}

.c4:active {
  background-color: #E2E2E2;
}

.c3 {
  font-size: 1.25rem;
  line-height: 1.875rem;
  font-weight: 500;
  font-family: roboto;
  margin-right: 0.5rem;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #000000;
}

.c0 {
  position: fixed;
  inset: 0;
  z-index: 110;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 0 1.25rem;
}

.c1 {
  display: flex;
  flex-direction: column;
  max-width: 992px;
  width: 100%;
  min-height: 300px;
  background-color: #FFFFFF;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
  border-radius: 4px;
  z-index: 1;
  max-height: calc(100vh - 1.875rem);
}

.c7 {
  display: flex;
  flex-direction: column;
  overflow: auto;
}

.c7::-webkit-scrollbar {
  width: 4px;
}

.c7::-webkit-scrollbar-track {
  background: #EEEEEE;
}

.c7::-webkit-scrollbar-thumb {
  background: #CBCBCB;
}

.c7::-webkit-scrollbar-thumb:hover {
  background: #AFAFAF;
}

.c2 {
  height: 4.75rem;
  padding: 0 1.25rem;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  display: flex;
  align-items: center;
  background-color: #FFFFFF;
  flex-shrink: 0;
}

.c8 {
  padding: 2px 1.25rem;
  padding-bottom: 2px;
  display: flex;
  flex-direction: column;
}

.c9 {
  background-color: #FFFFFF;
  height: 4.75rem;
  padding: 0 1.25rem;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  justify-content: flex-end;
  margin-top: auto;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.c12 {
  position: absolute;
  inset: 0;
  z-index: 0;
  background-color: rgba(0,0,0,0.5);
}

<div
    class="c0"
    data-testid="modal-container"
    style="opacity: 0;"
  >
    <div
      class="c1"
      style="opacity: 0; transform: translate3d(0px, 50px, 0px);"
    >
      <div
        class="c2"
      >
        <h2
          class="c3"
          font-family="roboto"
        >
          Create Flag Large
        </h2>
        <button
          class="c4"
        >
          <div
            class="c5"
            data-testid="icon-container"
            size="24"
          >
            <span
              class="c6 material-symbols-rounded"
              color="#000000"
              data-testid="icon"
              size="24"
            >
              close
            </span>
          </div>
        </button>
      </div>
      <div
        class="c7"
      >
        <div
          class="c8"
        >
          Body Content
        </div>
        <div
          class="c9"
        >
          <button
            class="c10"
            data-testid="button"
          >
            <span
              class=""
            >
              Close
            </span>
          </button>
          <button
            class="c11"
            data-testid="button"
          >
            <span
              class=""
            >
              Create
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="c12"
    />
  </div>
</DocumentFragment>
`;
